fix: checkbox display on mobile

--- a/src/design-system/components/checkbox/Checkbox.module.scss
+++ b/src/design-system/components/checkbox/Checkbox.module.scss
@@ -18,6 +18,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0;
 
     &.isChecked {
         background-color: map.get($colors, "purple");
